--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -2,5 +2,22 @@
 
 {{define "main"}}
     <h2>Shutters calculator</h2>
-    <p>There's nothing to see here... yet!</p>
+    {{if .Categories}}
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Название</th>
+                <th>Цена, &#8381;</th>
+            </tr>
+            {{range .Categories}}
+            <tr>
+                <td>{{.ID}}</td>
+                <td>{{.Name}}</td>
+                <td>{{.Price}}</td>
+            </tr>
+            {{end}}
+        </table>
+    {{else}}
+        <p>There's nothing to see here... yet!</p>
+    {{end}}
 {{end}}
