--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -1,32 +1,49 @@
 {{define "base"}}
-<!doctype html>
-<html lang='en'>
+<!DOCTYPE html>
+<html lang='ru'>
     <head>
         <meta charset='utf-8'>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ .Title }} - Shutters calculator</title>
-        <!-- Link to the CSS stylesheet and favicon -->
-        <link rel='stylesheet' href='/static/css/main.css'>
-        <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
-        <!-- Also link to some fonts hosted by Google -->
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     </head>
-    <body>
-        <header>
-            <h1><a href='/'>Shutters calculator</a></h1>
-        </header>
-        <nav>
-            <div>
-                <a href='/'>Home</a>
+
+    <body class="hold-transition sidebar-mini layout-fixed">
+    <div class="wrapper">
+        <div class="content-wrapper">
+            <div class="content-header">
+                <div class="container-fluid">
+                    <div class="row mb-2">
+                        <div class="col-sm-6">
+                            <h1 class="m-0">Dekon</h1>
+                        </div>
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                                <li class="breadcrumb-item active">Калькулятор</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-            </div>
-        </nav>
-        <main>
-            {{template "main" .}}
-        </main>
-        <!-- And include the JavaScript file -->
-        <script src="/static/js/main.js" type="text/javascript"></script>
+            <section class="content">
+                <div class="container-fluid">
+                    <!-- Main row -->
+                    <div class="row">
+                        <section class="col-lg-12">
+                            {{template "main" .}}
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+        <aside class="control-sidebar control-sidebar-dark">
+            <!-- Control sidebar content goes here -->
+        </aside>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
     </body>
 </html>
 {{end}}
