--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -30,6 +30,101 @@
                             </select>
                         </div>
                         <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="outer_brackets" {{if (exist .Options "outer_brackets")}} checked {{end}}>
+                                        <label class="form-check-label">Внешние кронштейны</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="middle_fixer" {{if (exist .Options "middle_fixer")}} checked {{end}}>
+                                        <label class="form-check-label">Заклепка по середине</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="profile_handle" {{if (exist .Options "profile_handle")}} checked {{end}}>
+                                        <label class="form-check-label">Ручка на профиль</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label>Комплект направляющих</label>
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="0" name="set_of_guides" checked>
+                                        <label class="form-check-label">Нет</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="1" name="set_of_guides" {{if (exist .Options "set_of_guides_1")}} checked {{end}}>
+                                        <label class="form-check-label">До 1м</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="1.3" name="set_of_guides" {{if (exist .Options "set_of_guides_1.3")}} checked {{end}}>
+                                        <label class="form-check-label">До 1.3м</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="1.5" name="set_of_guides" {{if (exist .Options "set_of_guides_1.5")}} checked {{end}}>
+                                        <label class="form-check-label">До 1.5м</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label>Палочка управления </label>
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="0" name="control_stick" checked>
+                                        <label class="form-check-label">Нет</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="0.5" name="control_stick" {{if (exist .Options "control_stick_0.5")}} checked {{end}}>
+                                        <label class="form-check-label">0.5м</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="1" name="control_stick" {{if (exist .Options "control_stick_1")}} checked {{end}}>
+                                        <label class="form-check-label">1м</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="1.5" name="control_stick" {{if (exist .Options "control_stick_1.5")}} checked {{end}}>
+                                        <label class="form-check-label">1.5м</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="2" name="control_stick" {{if (exist .Options "control_stick_2")}} checked {{end}}>
+                                        <label class="form-check-label">2м</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label>Магнитные защелки</label>
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="0" name="magnetic_clasps" checked>
+                                        <label class="form-check-label">Нет</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="2" name="magnetic_clasps" {{if (exist .Options "magnetic_clasps_2")}} checked {{end}}>
+                                        <label class="form-check-label">2 шт</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="4" name="magnetic_clasps" {{if (exist .Options "magnetic_clasps_4")}} checked {{end}}>
+                                        <label class="form-check-label">4 шт</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label>Ширина</label>
